# luna-downloadmgr

./: CMakeLists.txt  README.md  oss-pkg-info.yaml
files/conf/: downloadManager-broadway.conf.in  downloadManager-mantaray.conf.in  downloadManager-topaz.conf.in  downloadManager.conf.in
files/launch/: LunaDownloadMgr.conf.in  LunaDownloadMgr.in  luna-download-mgr.service.in  luna-download-mgr.sh.in
files/schema/: DownloadService.allow1x.schema  DownloadService.cancelDownload.schema  DownloadService.clearHistory.schema  DownloadService.deleteDownloadedFile.schema  DownloadService.download.schema  DownloadService.downloadStatusQuery.schema  DownloadService.getAllHistory.schema  DownloadService.pauseDownload.schema  DownloadService.resumeDownload.schema  DownloadService.upload.schema
files/sysbus/: com.webos.service.downloadmanager.api.json  com.webos.service.downloadmanager.groups.json  com.webos.service.downloadmanager.perm.json  com.webos.service.downloadmanager.role.json.in  com.webos.service.downloadmanager.service.in
src/: DownloadHistoryDb.cpp  DownloadHistoryDb.h  DownloadManager.cpp  DownloadManager.h  DownloadService.cpp  DownloadSettings.cpp  DownloadSettings.h  DownloadTask.cpp  DownloadTask.h  DownloadUtils.cpp  DownloadUtils.h  JUtil.cpp  JUtil.h  Logging.cpp  Logging.h  Main.cpp  Singleton.cpp  Singleton.hpp  Time.h  TransferTask.h  UploadTask.cpp  UploadTask.h  UrlRep.cpp  UrlRep.h  Utils.cpp  Utils.h  Watchdog.cpp  Watchdog.h  glibcurl.c  glibcurl.h
src/base/: CurlDescriptor.h  DownloadTask.cpp  DownloadTask.h  PostItem.h  TransferTask.h  UploadTask.cpp  UploadTask.h
src/core/: DownloadHistory.h  DownloadHistoryDb.cpp  DownloadHistoryDb.h  DownloadManager.cpp  DownloadManager.h  DownloadService.cpp  Watchdog.cpp  Watchdog.h
src/setting/: DownloadSettings.cpp  DownloadSettings.h
src/test/scripts/: lots-of-downloads.sh
src/util/: DownloadUtils.cpp  DownloadUtils.h  JUtil.cpp  JUtil.h  Logging.cpp  Logging.h  Singleton.cpp  Singleton.hpp  UrlRep.cpp  UrlRep.h  Utils.cpp  Utils.h
